--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.10",
+    "autoprefixer": "^10.4.15",
+    "react-inlinesvg": "^4.0.3",
+    "react-slick": "^0.29.0",
+    "react-router-dom": "^6.15.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
